2006-04-07  Derek Price  <derek@ximbiot.com>

	[patch #4992]
	* sanity.sh (server): Handle tests launched with stdin closed.

2006-04-06  Derek Price  <derek@ximbiot.com>

	* filesubr.c (last_component, expand_wild), rcs.c (RCS_deltas,
	RCS_rewrite), server.c (server_checked_in): Add assertions.
	(Thanks to an incorrect report from Brendan Harrison
	<brendan.harrison@klocwork.com>.)

2006-04-05  Derek Price  <derek@ximbiot.com>

	[patch #4992]
	* main.c (opt_usage): Rephrase --timeout usage.
	(main): Handle arguments to --timeout which specifying units.
	* sanity.sh (server): Check --timeout unit handling.

2006-04-05  Mark D. Baushke  <mdb@gnu.org>

	* logmsg.c (logfile_write): Add missing "T" to format_cmdline to
	avoid "Unknown format character in info file ('T')." error.
	* sanity.sh (info-setup-newfmt-1, info-newfmt-6): Add a test to
	exercise it.

2006-03-31  Mark D. Baushke  <mdb@gnu.org>

	* cvsrc.c (read_cvsrc): Deal with \r\n (DOS) line endings in
	.cvsrc files.

2006-03-28  Derek Price  <derek@ximbiot.com>

	[patch #4992]
	* buffer.c (fd_buffer): Store new connection timeout parameter.
	(fd_buffer_initialize): Handle and set new connection timeout
	parameter.
	(fd_buffer_input, fd_buffer_output): Time out connections when
	requested.
	* buffer.h (fd_buffer_initialize): Update proto.
	* client.c, log-buffer.c, server.c: Update all callers.
	* server.c (server): Handle time out return from input/output.
	* command_line_opt.h: New header file.
	* main.c (main): Handle --timeout global option.
	* sanity.sh (server-23): New test.

2006-03-24  Derek Price  <derek@ximbiot.com>

	* sanity.sh (recase): Correct spelling typo in comment.

2006-03-19  Mark D. Baushke  <mdb@gnu.org>

	* Makefile.in: Regenerated.

2006-03-07  Derek Price  <derek@ximbiot.com>

	* tag.c (rtag_proc): Search the Attic when -F is used.
	* sanity.sh (tests): Run death-rtag.
	(death-rtag): Expect success.

	* sanity.sh (death-rtag): Add failing force tag move test.
