@@ -2432,7 +2432,10 @@ void
 send_a_repository (const char *dir, const char *repository,
                    const char *update_dir_in)
 {
-    char *update_dir = xstrdup (update_dir_in);
+    char *update_dir;
+
+    assert (update_dir_in);
+    update_dir = xstrdup (update_dir_in);
 
     if (!toplevel_repos && repository)
     {
